--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "next": "12.1.6",
+    "postcss": "^8.4.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
